// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen accessGroups config import-export] should create the accessGroups: the accessGroups have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ accessgroup [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen accessGroups config import-export] should skip the same accessGroups: the accessGroups have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= accessgroup [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen accessGroups config import-export] should throw exception when updating accessGroups with different values for unchangeable properties: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Unchangeable properties:
  - accessgroup [Environment/cfgObjectTest]:
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen accessGroups config import-export] should update the modified accessGroups: the modified accessGroups have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ accessgroup [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;
